test-cases/final-dump/loop_exit.exp
Error detected during type checking of module(s) loop_exit
final-dump/loop_exit.wybe:5:2: Uninitialised argument in call to proc println, argument 1
