test-cases/final-dump/loop_exit.wybe
?ls = []
do {
    while [?i | ?ls] = ls
}
!println(i:int)
